Curso de CSS Terminado

--- a/Cuso_CSS/index.html
+++ b/Cuso_CSS/index.html
@@ -1,10 +1,59 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <title>Primer CSS</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section class="center">
+        <p>Hola mundo</p>
+    </section>
+    <div class="inline-block">inline block</div>
+    <div class="inline-block">inline blick 2</div>
+    <div class="container">
+        <article class="column right">1</article>
+        <article class="column right">2</article>
+        <article class="column right">3</article>
+    </div>
+    <div class="container">
+        <img src="imagenes/coffee.png" class="left">
+        <p class="right">Soy un parrafo a la derecha</p>
+    </div>
+    <span>Span 1</span>
+    <span>Span 2</span>
+    <article id="position">Soy prop de posicion</article>
+    <table>
+        <tr>
+            <th>Nombre</th>
+            <th>Apellido</th
+        </tr>
+        <tr>
+            <td>Adrian</td>
+            <td>Guerra</td>
+        </tr>
+        <tr>
+            <td>Steeven</td>
+            <td>Rodriguez</td>
+        </tr>
+        <tr>
+            <td>AreS</td>
+            <td>Kill</td>
+        </tr>
+    </table>
+    <ul>
+        <li>Uno</li>
+        <li>Dos</li>
+        <li>Tres</li>
+
+    </ul>
+    <a href="https://www.google.com">Ve a google Colombia</a>
+    <p class="text">Esto es un texto</p>
+    <div class="margen">
+        Prueba Margen
+    </div>
     <article id="fondo">
         Soy la propiedad de background
     </article>
